// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The alarms-handler stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuStringParameter",
      "GuStringParameter",
      "GuStringParameter",
      "GuStringParameter",
      "GuStringParameter",
      "GuDistributionBucketParameter",
      "GuAllowPolicy",
      "GuAlarm",
      "GuLambdaErrorPercentageAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "alarmshandlerbackupemailaddress": {
      "Description": "Alarm email address to use if the alarms handler itself fails",
      "Type": "String",
    },
    "alarmshandlermobileaccountrolearn": {
      "Default": "/CODE/support/alarms-handler/accounts/MOBILE/roleArn",
      "Description": "ARN of role in the mobile account which allows cloudwatch:ListTagsForResource",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "alarmshandlermobileawsaccount": {
      "Default": "/accountIds/mobile",
      "Description": "ID of the mobile aws account",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "alarmshandlertargetingaccountrolearn": {
      "Default": "/CODE/support/alarms-handler/accounts/TARGETING/roleArn",
      "Description": "ARN of role in the targeting account which allows cloudwatch:ListTagsForResource",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "alarmshandlertargetingawsaccount": {
      "Default": "/accountIds/targeting",
      "Description": "ID of the targeting aws account",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ReadaccountidsfromSSMF4D801E9": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/accountIds",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ReadaccountidsfromSSMF4D801E9",
        "Roles": [
          {
            "Ref": "alarmshandlerlambdaServiceRole3953DF7F",
          },
          {
            "Ref": "alarmshandlerscheduledlambdaServiceRole62346D7A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "alarmshandleralarm5F97F469": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":",
                {
                  "Fn::GetAtt": [
                    "alarmshandleremailtopic52F6F612",
                    "TopicName",
                  ],
                },
              ],
            ],
          },
        ],
        "AlarmDescription": "There was an error in the lambda function that handles CloudWatch alarms.",
        "AlarmName": "CODE: Failed to handle CloudWatch alarm",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "deadlettersalarmshandlerqueueC7A67616",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 24,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "alarmshandlerassumerolepolicyA9C0D8AA": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Resource": [
                {
                  "Ref": "alarmshandlermobileaccountrolearn",
                },
                {
                  "Ref": "alarmshandlertargetingaccountrolearn",
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "alarmshandlerassumerolepolicyA9C0D8AA",
        "Roles": [
          {
            "Ref": "alarmshandlerlambdaServiceRole3953DF7F",
          },
          {
            "Ref": "alarmshandlerscheduledlambdaServiceRole62346D7A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "alarmshandlercloudwatchpolicy7746710B": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "cloudwatch:ListTagsForResource",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "alarmshandlercloudwatchpolicy7746710B",
        "Roles": [
          {
            "Ref": "alarmshandlerlambdaServiceRole3953DF7F",
          },
          {
            "Ref": "alarmshandlerscheduledlambdaServiceRole62346D7A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "alarmshandleremailtopic52F6F612": {
      "Properties": {
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "TopicName": "alarms-handler-email-topic-CODE",
      },
      "Type": "AWS::SNS::Topic",
    },
    "alarmshandleremailtopicTokenSubscription191C59777": {
      "Properties": {
        "Endpoint": {
          "Ref": "alarmshandlerbackupemailaddress",
        },
        "Protocol": "email",
        "TopicArn": {
          "Ref": "alarmshandleremailtopic52F6F612",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "alarmshandlerlambda383D2BAA": {
      "DependsOn": [
        "alarmshandlerlambdaServiceRoleDefaultPolicyFEF447F6",
        "alarmshandlerlambdaServiceRole3953DF7F",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "support/CODE/alarms-handler/alarms-handler.zip",
        },
        "Environment": {
          "Variables": {
            "APP": "alarms-handler",
            "NODE_OPTIONS": "--enable-source-maps",
            "STACK": "support",
            "STAGE": "CODE",
          },
        },
        "FunctionName": "alarms-handler-CODE",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "alarmshandlerlambdaServiceRole3953DF7F",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 15,
      },
      "Type": "AWS::Lambda::Function",
    },
    "alarmshandlerlambdaServiceRole3953DF7F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "alarmshandlerlambdaServiceRoleDefaultPolicyFEF447F6": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "alarmshandlerqueue255509D6",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/support/CODE/alarms-handler/alarms-handler.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/support/alarms-handler",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/support/alarms-handler/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "alarmshandlerlambdaServiceRoleDefaultPolicyFEF447F6",
        "Roles": [
          {
            "Ref": "alarmshandlerlambdaServiceRole3953DF7F",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "alarmshandlerlambdaSqsEventSourcealarmshandlerCODEalarmshandlerqueue16858B0A6ACA8CB7": {
      "Properties": {
        "EventSourceArn": {
          "Fn::GetAtt": [
            "alarmshandlerqueue255509D6",
            "Arn",
          ],
        },
        "FunctionName": {
          "Ref": "alarmshandlerlambda383D2BAA",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "alarmshandlerqueue255509D6": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "alarms-handler-queue-CODE",
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "deadlettersalarmshandlerqueueC7A67616",
              "Arn",
            ],
          },
          "maxReceiveCount": 3,
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "alarmshandlerqueuePolicy2451CBBF": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sqs:SendMessage",
              "Condition": {
                "ArnEquals": {
                  "aws:SourceArn": {
                    "Ref": "alarmshandlertopic003C974E",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "sns.amazonaws.com",
              },
              "Resource": {
                "Fn::GetAtt": [
                  "alarmshandlerqueue255509D6",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Queues": [
          {
            "Ref": "alarmshandlerqueue255509D6",
          },
        ],
      },
      "Type": "AWS::SQS::QueuePolicy",
    },
    "alarmshandlerqueuealarmshandlerCODEalarmshandlertopic53848409AA067E1C": {
      "DependsOn": [
        "alarmshandlerqueuePolicy2451CBBF",
      ],
      "Properties": {
        "Endpoint": {
          "Fn::GetAtt": [
            "alarmshandlerqueue255509D6",
            "Arn",
          ],
        },
        "Protocol": "sqs",
        "TopicArn": {
          "Ref": "alarmshandlertopic003C974E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "alarmshandlerscheduledcloudwatchpolicy4140AFEC": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "cloudwatch:DescribeAlarms",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "alarmshandlerscheduledcloudwatchpolicy4140AFEC",
        "Roles": [
          {
            "Ref": "alarmshandlerscheduledlambdaServiceRole62346D7A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "alarmshandlerscheduledlambdaB0DE9B60": {
      "DependsOn": [
        "alarmshandlerscheduledlambdaServiceRoleDefaultPolicy2CDBB3F4",
        "alarmshandlerscheduledlambdaServiceRole62346D7A",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "support/CODE/alarms-handler/alarms-handler.zip",
        },
        "Environment": {
          "Variables": {
            "APP": "alarms-handler",
            "NODE_OPTIONS": "--enable-source-maps",
            "STACK": "support",
            "STAGE": "CODE",
          },
        },
        "FunctionName": "alarms-handler-scheduled-CODE",
        "Handler": "indexScheduled.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "alarmshandlerscheduledlambdaServiceRole62346D7A",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 15,
      },
      "Type": "AWS::Lambda::Function",
    },
    "alarmshandlerscheduledlambdaErrorPercentageAlarmForLambda513D2105": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":",
                {
                  "Fn::GetAtt": [
                    "alarmshandleremailtopic52F6F612",
                    "TopicName",
                  ],
                },
              ],
            ],
          },
        ],
        "AlarmDescription": {
          "Fn::Join": [
            "",
            [
              {
                "Ref": "alarmshandlerscheduledlambdaB0DE9B60",
              },
              " exceeded 0% error rate",
            ],
          ],
        },
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              "High error percentage from ",
              {
                "Ref": "alarmshandlerscheduledlambdaB0DE9B60",
              },
              " lambda in CODE",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "Metrics": [
          {
            "Expression": "100*m1/m2",
            "Id": "expr_1",
            "Label": {
              "Fn::Join": [
                "",
                [
                  "Error % of ",
                  {
                    "Ref": "alarmshandlerscheduledlambdaB0DE9B60",
                  },
                ],
              ],
            },
          },
          {
            "Id": "m1",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "FunctionName",
                    "Value": {
                      "Ref": "alarmshandlerscheduledlambdaB0DE9B60",
                    },
                  },
                ],
                "MetricName": "Errors",
                "Namespace": "AWS/Lambda",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
          {
            "Id": "m2",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "FunctionName",
                    "Value": {
                      "Ref": "alarmshandlerscheduledlambdaB0DE9B60",
                    },
                  },
                ],
                "MetricName": "Invocations",
                "Namespace": "AWS/Lambda",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": 0,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "alarmshandlerscheduledlambdaServiceRole62346D7A": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "alarmshandlerscheduledlambdaServiceRoleDefaultPolicy2CDBB3F4": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/support/CODE/alarms-handler/alarms-handler.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/support/alarms-handler",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/support/alarms-handler/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "alarmshandlerscheduledlambdaServiceRoleDefaultPolicy2CDBB3F4",
        "Roles": [
          {
            "Ref": "alarmshandlerscheduledlambdaServiceRole62346D7A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "alarmshandlerscheduledlambdaalarmshandlerscheduledlambdacron08MONFRI05D79D892": {
      "Properties": {
        "Description": "notify about alarms in Alarm state every morning",
        "ScheduleExpression": "cron(0 8 ? * MON-FRI *)",
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "alarmshandlerscheduledlambdaB0DE9B60",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "alarmshandlerscheduledlambdaalarmshandlerscheduledlambdacron08MONFRI0AllowEventRulealarmshandlerCODEalarmshandlerscheduledlambda657C4C5AAB8684EC": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "alarmshandlerscheduledlambdaB0DE9B60",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "alarmshandlerscheduledlambdaalarmshandlerscheduledlambdacron08MONFRI05D79D892",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "alarmshandlertopic003C974E": {
      "Properties": {
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "TopicName": "alarms-handler-topic-CODE",
      },
      "Type": "AWS::SNS::Topic",
    },
    "alarmshandlertopicPolicy7401CE24": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sns:Publish",
              "Condition": {
                "ArnLike": {
                  "aws:SourceArn": [
                    {
                      "Fn::Join": [
                        "",
                        [
                          "arn:aws:cloudwatch:eu-west-1:",
                          {
                            "Ref": "alarmshandlermobileawsaccount",
                          },
                          ":alarm:*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          "arn:aws:cloudwatch:eu-west-1:",
                          {
                            "Ref": "alarmshandlertargetingawsaccount",
                          },
                          ":alarm:*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          "arn:aws:cloudwatch:eu-west-1:",
                          {
                            "Ref": "AWS::AccountId",
                          },
                          ":alarm:*",
                        ],
                      ],
                    },
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": "*",
              },
              "Resource": {
                "Ref": "alarmshandlertopic003C974E",
              },
              "Sid": "0",
            },
          ],
          "Version": "2012-10-17",
        },
        "Topics": [
          {
            "Ref": "alarmshandlertopic003C974E",
          },
        ],
      },
      "Type": "AWS::SNS::TopicPolicy",
    },
    "deadlettersalarmshandlerqueueC7A67616": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "MessageRetentionPeriod": 1209600,
        "QueueName": "dead-letters-alarms-handler-queue-CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;

exports[`The alarms-handler stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuStringParameter",
      "GuStringParameter",
      "GuStringParameter",
      "GuStringParameter",
      "GuStringParameter",
      "GuDistributionBucketParameter",
      "GuAllowPolicy",
      "GuAlarm",
      "GuLambdaErrorPercentageAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "alarmshandlerbackupemailaddress": {
      "Description": "Alarm email address to use if the alarms handler itself fails",
      "Type": "String",
    },
    "alarmshandlermobileaccountrolearn": {
      "Default": "/PROD/support/alarms-handler/accounts/MOBILE/roleArn",
      "Description": "ARN of role in the mobile account which allows cloudwatch:ListTagsForResource",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "alarmshandlermobileawsaccount": {
      "Default": "/accountIds/mobile",
      "Description": "ID of the mobile aws account",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "alarmshandlertargetingaccountrolearn": {
      "Default": "/PROD/support/alarms-handler/accounts/TARGETING/roleArn",
      "Description": "ARN of role in the targeting account which allows cloudwatch:ListTagsForResource",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "alarmshandlertargetingawsaccount": {
      "Default": "/accountIds/targeting",
      "Description": "ID of the targeting aws account",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ReadaccountidsfromSSMF4D801E9": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/accountIds",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ReadaccountidsfromSSMF4D801E9",
        "Roles": [
          {
            "Ref": "alarmshandlerlambdaServiceRole3953DF7F",
          },
          {
            "Ref": "alarmshandlerscheduledlambdaServiceRole62346D7A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "alarmshandleralarm5F97F469": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":",
                {
                  "Fn::GetAtt": [
                    "alarmshandleremailtopic52F6F612",
                    "TopicName",
                  ],
                },
              ],
            ],
          },
        ],
        "AlarmDescription": "There was an error in the lambda function that handles CloudWatch alarms.",
        "AlarmName": "PROD: Failed to handle CloudWatch alarm",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "deadlettersalarmshandlerqueueC7A67616",
                "QueueName",
              ],
            },
          },
        ],
        "EvaluationPeriods": 24,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "alarmshandlerassumerolepolicyA9C0D8AA": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Resource": [
                {
                  "Ref": "alarmshandlermobileaccountrolearn",
                },
                {
                  "Ref": "alarmshandlertargetingaccountrolearn",
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "alarmshandlerassumerolepolicyA9C0D8AA",
        "Roles": [
          {
            "Ref": "alarmshandlerlambdaServiceRole3953DF7F",
          },
          {
            "Ref": "alarmshandlerscheduledlambdaServiceRole62346D7A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "alarmshandlercloudwatchpolicy7746710B": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "cloudwatch:ListTagsForResource",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "alarmshandlercloudwatchpolicy7746710B",
        "Roles": [
          {
            "Ref": "alarmshandlerlambdaServiceRole3953DF7F",
          },
          {
            "Ref": "alarmshandlerscheduledlambdaServiceRole62346D7A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "alarmshandleremailtopic52F6F612": {
      "Properties": {
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "TopicName": "alarms-handler-email-topic-PROD",
      },
      "Type": "AWS::SNS::Topic",
    },
    "alarmshandleremailtopicTokenSubscription191C59777": {
      "Properties": {
        "Endpoint": {
          "Ref": "alarmshandlerbackupemailaddress",
        },
        "Protocol": "email",
        "TopicArn": {
          "Ref": "alarmshandleremailtopic52F6F612",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "alarmshandlerlambda383D2BAA": {
      "DependsOn": [
        "alarmshandlerlambdaServiceRoleDefaultPolicyFEF447F6",
        "alarmshandlerlambdaServiceRole3953DF7F",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "support/PROD/alarms-handler/alarms-handler.zip",
        },
        "Environment": {
          "Variables": {
            "APP": "alarms-handler",
            "NODE_OPTIONS": "--enable-source-maps",
            "STACK": "support",
            "STAGE": "PROD",
          },
        },
        "FunctionName": "alarms-handler-PROD",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "alarmshandlerlambdaServiceRole3953DF7F",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 15,
      },
      "Type": "AWS::Lambda::Function",
    },
    "alarmshandlerlambdaServiceRole3953DF7F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "alarmshandlerlambdaServiceRoleDefaultPolicyFEF447F6": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "alarmshandlerqueue255509D6",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/support/PROD/alarms-handler/alarms-handler.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/support/alarms-handler",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/support/alarms-handler/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "alarmshandlerlambdaServiceRoleDefaultPolicyFEF447F6",
        "Roles": [
          {
            "Ref": "alarmshandlerlambdaServiceRole3953DF7F",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "alarmshandlerlambdaSqsEventSourcealarmshandlerPRODalarmshandlerqueue21D5C3E59ECCFD65": {
      "Properties": {
        "EventSourceArn": {
          "Fn::GetAtt": [
            "alarmshandlerqueue255509D6",
            "Arn",
          ],
        },
        "FunctionName": {
          "Ref": "alarmshandlerlambda383D2BAA",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "alarmshandlerqueue255509D6": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "QueueName": "alarms-handler-queue-PROD",
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "deadlettersalarmshandlerqueueC7A67616",
              "Arn",
            ],
          },
          "maxReceiveCount": 3,
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "alarmshandlerqueuePolicy2451CBBF": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sqs:SendMessage",
              "Condition": {
                "ArnEquals": {
                  "aws:SourceArn": {
                    "Ref": "alarmshandlertopic003C974E",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "sns.amazonaws.com",
              },
              "Resource": {
                "Fn::GetAtt": [
                  "alarmshandlerqueue255509D6",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Queues": [
          {
            "Ref": "alarmshandlerqueue255509D6",
          },
        ],
      },
      "Type": "AWS::SQS::QueuePolicy",
    },
    "alarmshandlerqueuealarmshandlerPRODalarmshandlertopic952FCC2B727BB750": {
      "DependsOn": [
        "alarmshandlerqueuePolicy2451CBBF",
      ],
      "Properties": {
        "Endpoint": {
          "Fn::GetAtt": [
            "alarmshandlerqueue255509D6",
            "Arn",
          ],
        },
        "Protocol": "sqs",
        "TopicArn": {
          "Ref": "alarmshandlertopic003C974E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "alarmshandlerscheduledcloudwatchpolicy4140AFEC": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "cloudwatch:DescribeAlarms",
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "alarmshandlerscheduledcloudwatchpolicy4140AFEC",
        "Roles": [
          {
            "Ref": "alarmshandlerscheduledlambdaServiceRole62346D7A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "alarmshandlerscheduledlambdaB0DE9B60": {
      "DependsOn": [
        "alarmshandlerscheduledlambdaServiceRoleDefaultPolicy2CDBB3F4",
        "alarmshandlerscheduledlambdaServiceRole62346D7A",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "support/PROD/alarms-handler/alarms-handler.zip",
        },
        "Environment": {
          "Variables": {
            "APP": "alarms-handler",
            "NODE_OPTIONS": "--enable-source-maps",
            "STACK": "support",
            "STAGE": "PROD",
          },
        },
        "FunctionName": "alarms-handler-scheduled-PROD",
        "Handler": "indexScheduled.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "alarmshandlerscheduledlambdaServiceRole62346D7A",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 15,
      },
      "Type": "AWS::Lambda::Function",
    },
    "alarmshandlerscheduledlambdaErrorPercentageAlarmForLambda513D2105": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":",
                {
                  "Fn::GetAtt": [
                    "alarmshandleremailtopic52F6F612",
                    "TopicName",
                  ],
                },
              ],
            ],
          },
        ],
        "AlarmDescription": {
          "Fn::Join": [
            "",
            [
              {
                "Ref": "alarmshandlerscheduledlambdaB0DE9B60",
              },
              " exceeded 0% error rate",
            ],
          ],
        },
        "AlarmName": {
          "Fn::Join": [
            "",
            [
              "High error percentage from ",
              {
                "Ref": "alarmshandlerscheduledlambdaB0DE9B60",
              },
              " lambda in PROD",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "Metrics": [
          {
            "Expression": "100*m1/m2",
            "Id": "expr_1",
            "Label": {
              "Fn::Join": [
                "",
                [
                  "Error % of ",
                  {
                    "Ref": "alarmshandlerscheduledlambdaB0DE9B60",
                  },
                ],
              ],
            },
          },
          {
            "Id": "m1",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "FunctionName",
                    "Value": {
                      "Ref": "alarmshandlerscheduledlambdaB0DE9B60",
                    },
                  },
                ],
                "MetricName": "Errors",
                "Namespace": "AWS/Lambda",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
          {
            "Id": "m2",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "FunctionName",
                    "Value": {
                      "Ref": "alarmshandlerscheduledlambdaB0DE9B60",
                    },
                  },
                ],
                "MetricName": "Invocations",
                "Namespace": "AWS/Lambda",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 0,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "alarmshandlerscheduledlambdaServiceRole62346D7A": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "alarmshandlerscheduledlambdaServiceRoleDefaultPolicy2CDBB3F4": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/support/PROD/alarms-handler/alarms-handler.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/support/alarms-handler",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/support/alarms-handler/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "alarmshandlerscheduledlambdaServiceRoleDefaultPolicy2CDBB3F4",
        "Roles": [
          {
            "Ref": "alarmshandlerscheduledlambdaServiceRole62346D7A",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "alarmshandlerscheduledlambdaalarmshandlerscheduledlambdacron08MONFRI05D79D892": {
      "Properties": {
        "Description": "notify about alarms in Alarm state every morning",
        "ScheduleExpression": "cron(0 8 ? * MON-FRI *)",
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "alarmshandlerscheduledlambdaB0DE9B60",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "alarmshandlerscheduledlambdaalarmshandlerscheduledlambdacron08MONFRI0AllowEventRulealarmshandlerPRODalarmshandlerscheduledlambda3FE085C9159D4A00": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "alarmshandlerscheduledlambdaB0DE9B60",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "alarmshandlerscheduledlambdaalarmshandlerscheduledlambdacron08MONFRI05D79D892",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "alarmshandlertopic003C974E": {
      "Properties": {
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "TopicName": "alarms-handler-topic-PROD",
      },
      "Type": "AWS::SNS::Topic",
    },
    "alarmshandlertopicPolicy7401CE24": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sns:Publish",
              "Condition": {
                "ArnLike": {
                  "aws:SourceArn": [
                    {
                      "Fn::Join": [
                        "",
                        [
                          "arn:aws:cloudwatch:eu-west-1:",
                          {
                            "Ref": "alarmshandlermobileawsaccount",
                          },
                          ":alarm:*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          "arn:aws:cloudwatch:eu-west-1:",
                          {
                            "Ref": "alarmshandlertargetingawsaccount",
                          },
                          ":alarm:*",
                        ],
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          "arn:aws:cloudwatch:eu-west-1:",
                          {
                            "Ref": "AWS::AccountId",
                          },
                          ":alarm:*",
                        ],
                      ],
                    },
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": "*",
              },
              "Resource": {
                "Ref": "alarmshandlertopic003C974E",
              },
              "Sid": "0",
            },
          ],
          "Version": "2012-10-17",
        },
        "Topics": [
          {
            "Ref": "alarmshandlertopic003C974E",
          },
        ],
      },
      "Type": "AWS::SNS::TopicPolicy",
    },
    "deadlettersalarmshandlerqueueC7A67616": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "MessageRetentionPeriod": 1209600,
        "QueueName": "dead-letters-alarms-handler-queue-PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "alarms-handler",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;
